# libnamedkitten

./: .gitignore  CMakeLists.txt
include/: conversions.hpp
src/: conversions.cpp
